# ME454_2022

./: LICENSE  README.md
balancing_robot/: CMakeLists.txt  README.md  package.xml
balancing_robot/Notebook/: Two_Wheel_Robot_Control.ipynb  Two_Wheel_Robot_DQN.ipynb
balancing_robot/config/: three_wheel_control.yaml  two_wheel_control.yaml  two_wheel_control_effort.yaml  two_wheel_control_vel.yaml
balancing_robot/launch/: launch_three_wheel_robot.launch  launch_two_wheel_robot_effort.launch  launch_two_wheel_robot_vel.launch
balancing_robot/src/: dqn_train_effort.py  dqn_train_vel.py
balancing_robot/urdf/: three_wheel_robot.urdf  two_wheel_robot.urdf
balancing_robot/world/: midterm2022.world
billiard/: CMakeLists.txt  README.md  makeBilliard.launch  package.xml
billiard/urdf/: ball0.urdf  ball1.urdf  ball2.urdf  ball3.urdf  ball4.urdf  ball5.urdf  ball6.urdf
billiard/world/: billiard.world
bowling/: CMakeLists.txt  README.md  makeBowling.launch  package.xml
bowling/urdf/: bowl.urdf  pin.urdf
bowling/world/: bowling.world
cartpole_control/: CMakeLists.txt  README.md  package.xml
cartpole_control/config/: joint_position_control.yaml
cartpole_control/launch/: cartpole.launch  cartpole_gazebo.launch
cartpole_control/src/: dqn_train.py
cartpole_control/urdf/: cartpole_v1.urdf
crankshaft/: CMakeLists.txt  README.md  package.xml
crankshaft/urdf/: crankshaft.urdf
gazebo_energy_tutorial/: CMakeLists.txt  Readme.md  package.xml
gazebo_energy_tutorial/launch/: empty_world_elastic.launch
gazebo_energy_tutorial/sdf/: oneBouncyBall.sdf
gazebo_energy_tutorial/src/: energy_publisher.cpp
gazebo_energy_tutorial/urdf/: oneBouncyBall.urdf
gazebo_energy_tutorial/world/: empty_elastic.world
gazebo_friction_test/: CMakeLists.txt  README.md  package.xml
gazebo_friction_test/urdf/: friction_cube.urdf  friction_cube_fdirchanged.urdf  taweek9 copy.urdf  taweek9.urdf  test1.urdf
image_transport_tutorial/: CMakeLists.txt  package.xml
image_transport_tutorial/src/: my_subscriber.cpp
lidar_tutorial/: CMakeLists.txt  lidar_data.bag  package.xml
lidar_tutorial/src/: lidar_node.cpp  lidar_tutorial.cpp
massAndInertia/: CMakeLists.txt  README.md  package.xml
massAndInertia/urdf/: box_rotation.urdf  box_translation.urdf
mass_and_inertia/: CMakeLists.txt  README.md  package.xml
mass_and_inertia/src/: listener.cpp
midterm2022/: CMakeLists.txt  README.md  package.xml
oneball_topic/: CMakeLists.txt  README.md  package.xml
oneball_topic/src/: listener.cpp  (+1 more)
oneball_urdf/: CMakeLists.txt  README.md  package.xml
pendulum_tutorial/: CMakeLists.txt  README.md  package.xml
ros_tutorials_topic/: CMakeLists.txt  package.xml
scara_control/: CMakeLists.txt  package.xml
sensor_robot/: CMakeLists.txt  README.md  package.xml
vibration/: CMakeLists.txt  README.md  package.xml
(+13 files in other folders)
